// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account Resolvers getServerAccounts full accounts 1`] = `
Object {
  "data": Object {
    "getServerAccounts": Array [
      Object {
        "id": "accountID",
        "loggedIn": true,
        "name": "account",
        "type": "server",
      },
      Object {
        "id": "sso",
        "loggedIn": true,
        "name": "SSO Account",
        "type": "sso",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Account Resolvers getServerAccounts without SSO 1`] = `
Object {
  "data": Object {
    "getServerAccounts": Array [
      Object {
        "id": "accountID",
        "loggedIn": true,
        "name": "account",
        "type": "server",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Account Resolvers getServerAccounts without accounts 1`] = `
Object {
  "data": Object {
    "getServerAccounts": Array [
      Object {
        "id": "accountID",
        "loggedIn": true,
        "name": "account",
        "type": "server",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
